Updated About page

--- a/apps/ayoshitake.com/public/css/style.css
+++ b/apps/ayoshitake.com/public/css/style.css
@@ -157,7 +157,7 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#5b5f66', end
 }
 
 #about_page {
-	background-image: url('/img/space_768.jpeg');
+	background-image: url('/img/DSC_7307_1920.JPG');
 	width:100%;
 	height:100%;
 }
