Fixed null-user problem with view_wishes Minor change to auth - exposing isAuthenticated

--- a/apps/wishing_well/views/view_wishes.ejs
+++ b/apps/wishing_well/views/view_wishes.ejs
@@ -11,7 +11,7 @@
         wish = wishes[i]; %>
         <tr>
           <td><%= wish.wish %></td>
-          <td><%= typeof(wish.user) === 'object' ? wish.user.username : '' %></td>
+          <td><%= (typeof(wish.user) === 'object' && wish.user !== null) ? wish.user.username : '' %></td>
         </tr>
       <% } %>
     </table>
