--- a/apps/ayoshitake.com/views/about.ejs
+++ b/apps/ayoshitake.com/views/about.ejs
@@ -32,9 +32,10 @@
           <p>Aaron Yoshitake is a Full-Stack web developer and wizard based out of breezy, Oceanside, California.</p>
           <p>When he is not wielding his supernatural powers, Aaron can be found in a crazy thing called "The Internet," engineering new, interactive systems using HTML, CSS, JavaScript (jQuery and Node.js), and MongoDB. </p>
           <p>A member of the 
-            <a href = "http://www.yelp.com/biz/self-realization-fellowship-hermitage-and-meditation-gardens-encinitas-2"> 
+            <a href = "https://www.facebook.com/EncinitasAikido"> 
             Encinitas Doshin-Aikido Dojo
             </a>, Aaron is finding the way of harmony with universal energy through practice, focus, and meditation.  He will one day achieve his goal of <%= goal %>
+          <p>Contact him telepathically, through the æther, or by e-mail at <a href="mailto:airandfingers@gmail.com"> airandfingers@gmail.com</a></p> 
       </div>
       <img src="img/big_redpill_right.gif" />
   </div>
@@ -49,7 +50,7 @@
 
   <script>
   $(document).ready(function() {
-      $('#about_intro').fadeOut(3750, function() {
+      $('#about_intro').delay(3000).fadeOut(2000, function() {
           $('#about_content').fadeIn();
       });
   });
