--- a/apps/ayoshitake.com/views/contact.ejs
+++ b/apps/ayoshitake.com/views/contact.ejs
@@ -1,17 +1,17 @@
 <% include ../../../views/head %>
 
   <div role="main" class="main" id="contact-main">
-      <h4>Click on Wilfred the messenger pigeon to send us an e-mail.</h4>
-      <br />
-      <a href="mailto:airandfingers@gmail.com">
-          <img src="/img/messenger_pigeon.jpg" />
-      </a>
-      <br />
+    <h4 class="invert">Click on Wilfred the messenger pigeon to send an e-mail, or e-mail airandfingers@gmail.com</h4>
+    <a href="mailto:airandfingers@gmail.com">
+      <img src="/img/messenger_pigeon.jpg" id="wilfred" />
+    </a>    
+    <div class="invert">
+      <h3>Disclaimer:</h3>
+      <p>No pigeons were harmed in the making of this website, but we do make them earn their keep. Really, nobody likes a lazy pigeon.</p>
+    </div>
   </div>
 
-  <footer>
-    <h3>Disclaimer:</h3>
-    No pigeons were harmed in the making of this website.
-  </footer>
+
+
 
 <% include ../../../views/foot %>
