--- a/apps/ayoshitake.com/public/css/style.css
+++ b/apps/ayoshitake.com/public/css/style.css
@@ -29,26 +29,6 @@ html {
 	min-height: 100%;
 }
 
-.invert {
-  color: #ffffff;
-  margin: 0 auto;
-  max-width: 700px;
-}
-
-.slideshow {
-  margin-top: 5em;
-  margin-right: auto;
-  margin-left: auto;
-}
-
-.slideshow a {
-  width: 276px;
-}
-
-.slideshow a.portal img {
-    width: 275px;
-}
-
 .button {
    border-top: 1px solid #5a6770;
    background: #586975;
@@ -80,6 +60,12 @@ html {
    background: #040505;
    }
 
+.invert {
+  color: #ffffff;
+  margin: 0 auto;
+  max-width: 700px;
+}
+
 .password {
     margin: 20px;
 }
@@ -100,6 +86,20 @@ html {
   margin-left: auto;
 }
 
+.slideshow {
+  margin-top: 5em;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.slideshow a {
+  width: 50%;
+}
+
+.slideshow a.portal img {
+    width: 50%;
+}
+
 .username {
     margin: 20px;
 }
@@ -109,31 +109,25 @@ html {
     text-align: center;   
 }
 
-#about_intro {
-    text-wrap: normal;
-    color: white;
-    font-family: Georgia, sans-serif;
-    font-size: 1.5em;
-    text-shadow: 1px 1px 1px #000;
-
-    width: 720px;
-    text-align: center;
-    margin: 0 auto;
-    padding: 10px;
-}
-
 #about_content {
-	display: none; 
 	color: white;
 	font-family: Georgia, sans-serif;
-	font-size: 1.5em;
-	text-shadow: 1.5px 1.5px 1.5px #000;
+	font-size: 1.4em;
+	text-shadow: 1.8px 1.8px 1.8px #000;
 
 	width: 50%;
   max-width: 700px;
 	text-align: center;
 	margin: 0 auto;
 	padding: 10px;
+}
+
+#about_page {
+  background: url('/img/DSC_7307_1920.JPG');
+  background-size: 100%;
+  background-repeat: no-repeat;
+  width:100%;
+  height:100%;
 }
 
 #about_page > img {
@@ -159,12 +153,6 @@ html {
 #under_construction {
 	display: none;
   font-weight: normal;
-}
-
-#about_page {
-	background-image: url('/img/DSC_7307_1920.JPG');
-	width:100%;
-	height:100%;
 }
 
 #registration_main {
