--- a/apps/ayoshitake.com/views/about.ejs
+++ b/apps/ayoshitake.com/views/about.ejs
@@ -3,9 +3,9 @@
   <div role="main" class="main" id="about_page">
 
       <%
-      var rand2 = Math.floor(Math.random()*6), 
+      var rand2 = Math.floor(Math.random()*7), 
           goals = [
-          , "being everywhere at once."
+            "being everywhere at once."
           , "immortality! MUAHAHAHA."
           , "helping to make the World Wide Web a more user-friendly place."
           , "speaking fluent Spanish."
