minor font styling changes on about page.

--- a/apps/ayoshitake.com/public/css/style.css
+++ b/apps/ayoshitake.com/public/css/style.css
@@ -111,7 +111,7 @@ html {
 
 #about_content {
 	color: white;
-	font-family: Georgia, sans-serif;
+	font-family: 'Helvetica Neue', Helvetica, Georgia, sans-serif;
 	font-size: 1.4em;
 	text-shadow: 1.8px 1.8px 1.8px #000;
 
