--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -42,7 +42,7 @@
 <script type="text/javascript">
 $(document).ready(function() {
   $('.slideshow')    
-    .after('<div id="slide_nav">')
+    .before('<div id="slide_nav">')
     .cycle({ 
         fx: 'fade', // transition type
         delay: 2700,
