--- a/public/css/header.css
+++ b/public/css/header.css
@@ -10,7 +10,6 @@ header {
 
 .navbar {
     background: black;
-    position: fixed;
     top: 0;
     left: 0;
     width: 100%;
@@ -29,12 +28,13 @@ header {
     display: inline;
     float: left;
     background: black;
-    padding-left: 10px;
-    padding-right: 10px;
+    padding-left: 1%;
+    padding-right: 1%;
     vertical-align: center;
 }
 
 .navbar li.right {
+    display: inline;
     float: right;
 }
 
@@ -47,9 +47,10 @@ header {
 .navbar > ul > li > ul {
     background-color: black;
     position: absolute;
-    width: 7em;
+    width: 10em;
     font-size: .9em;
     left: -999em;
+    margin: 0;
 }
 
 .navbar a:link    { color: #CCCCCC; }
@@ -78,7 +79,17 @@ h3 {
 #login, #register {
     width: 200px;
     height: 200px;
-    position: absolute;
+    position: relative;
     display: none;
 }
 
+@media all and (max-width: 800px) {
+    .navbar li {
+        display: block;
+    }
+
+    .navbar li.right {
+        float: none;
+        display: block;
+    }
+}
