--- a/views/head.ejs
+++ b/views/head.ejs
@@ -16,11 +16,13 @@
   <meta name="description" content="">
 
   <!-- Mobile viewport optimized: h5bp.com/viewport -->
-  <meta name="viewport" content="width=device-width">
+  <meta name="viewport" content="width=device-width, initial-scale=1"> 
 
   <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
 
   <link rel="stylesheet" href="<%= settings.protocol %>://<%= settings.base_url %>/css/header.css" />
+  <!-- USE THIS TO RELINK STYLESHEET WHEN TESTING & comment out the one above:
+  <link rel="stylesheet" href="/css/header.css" />  -->
   <link rel="stylesheet" href="css/style.css" />
 
   <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
