--- a/apps/wishing_well/views/index.ejs
+++ b/apps/wishing_well/views/index.ejs
@@ -1,9 +1,10 @@
 <% include ../../../views/head %>
 
-  <header>
-    <a href= "/" id="logo" alt="The Wishing Well" class="ir"></a>
-  </header>
-  <div role="main">
+  <div id="main">  
+    <div class="banner">
+      <a href= "/" id="logo" alt="The Wishing Well" class="ir"></a>
+    </div>
+
     <form method="post" action="wish" id="wish_form">
         <label for="wish" id="wish_label">I wish for:</label>
         <input type="text" id="wish" name="wish" />
