--- a/public/css/header.css
+++ b/public/css/header.css
@@ -63,6 +63,7 @@ header {
         font-size: .9em;
         left: -999em;
         margin: 0;
+        z-index: 1000;
     }
 
     .navbar a:link    { color: #CCCCCC; }
@@ -84,28 +85,12 @@ header {
         margin-bottom: 20px;
     }
 
-    #login, #register {
-        width: 200px;
-        height: 200px;
-        position: relative;
+    #login {
+        position: absolute;
         display: none;
+        color: white;
+        font-size: .75em;
+        background-color: black;
+        z-index: 10;
+
     }
-    .navbar li {
-        display: block;        
-    }
-
-    .navbar li.right {
-        float: none;
-        display: block;
-    }
-    
-@media all and (min-width: 320px) {
-
-}
-
-@media all and (min-width: 768px) {
-
-
-}
-
-
