Moved etstutoring.org directories into dedicated apps Changed ETS 2's contact page's map to use Google Maps API

--- a/apps/ets_tutoring_2/public/css/style.css
+++ b/apps/ets_tutoring_2/public/css/style.css
@@ -99,6 +99,14 @@ body {
     padding-bottom: 4px;
 }
 
+#map-container {
+    height: 350px;
+}
+
+#map-popup {
+    width: 100%;
+}
+
 /*bootstrap overrides*/
 @media (max-width: 980px) {
     .nav-collapse, .nav-collapse.collapse {
