--- a/apps/ets_tutoring_2/public/css/style.css
+++ b/apps/ets_tutoring_2/public/css/style.css
@@ -5,6 +5,10 @@ html, body {
     height: 100%;
 }
 
+h1 {
+    padding-bottom: 1%;
+}
+
 #main-wrap {
     height: 80%;
     margin-bottom: 20px; /* this needs to be bigger than footer height */   
@@ -19,8 +23,6 @@ html, body {
 }
 
 .hero-unit {
-    background-position: center;
-    background-size: 1em;
     opacity: .95;
     margin-left: 1%;
     margin-right: 1%;
@@ -38,7 +40,7 @@ body {
 }
 
 .navbar {
-    padding-top: 60px;
+    padding-top: 15px;
 }
 
 .navbar-inner {
@@ -74,6 +76,19 @@ body {
     opacity: 1;
 }
 
+/* chart page */
+#chart {
+    max-height: 75%
+}
+
+#chart_text {
+    vertical-align: middle;
+    text-align: center;
+    background-color: white;
+    padding: 2%;
+    margin: .5%;
+}
+
 /*employment page*/
 #work {
     opacity: .98;
@@ -85,6 +100,8 @@ body {
     margin-top: 20px;
     margin-bottom: 20px;
 }
+
+
 
 /*qualifying schools page*/
 #qualify-hero {
@@ -101,6 +118,13 @@ body {
 
 #map-container {
     height: 350px;
+}
+
+/*tutors */
+#tutor_heading {
+    text-align: center;
+    font-size: 4em;
+    padding-top: 2%
 }
 
 /* exception to Bootstrap rule;*/
