--- a/apps/ets_tutoring_2/public/css/style.css
+++ b/apps/ets_tutoring_2/public/css/style.css
@@ -1,18 +1,34 @@
 /* ===== ETS-specific Styles ===================================================
    Author: Red Pill Web Masons
    ========================================================================== */
+
+@font-face  {
+    font-family: BurstMyBubble;
+    src: url('/BurstMyBubble.ttf');
+}
+
+
+aside {
+    display: block;
+
+}
+
 html, body {
     height: 100%;
+    font-family: BurstMyBubble;
 }
 
 h1 {
-    padding-bottom: 2%;
+    padding-bottom: .1em;
 }
 
 h2 {
-    padding-top: 2%;
-    margin-top: 2%;
-    min-height: 
+    padding-top: .5em;
+    margin-top: .5em;
+}
+
+#slide_show1 img {
+    box-shadow: 5px 5px 7.5px #888888;
 }
 
 #billboard_line {
@@ -84,6 +100,13 @@ body {
 
 .navbar .brand.active {
     color: white;
+}
+
+
+#bottom_four_4 {
+    background-image: url('/img/IMG_0378_draw1.jpg');
+    background-size: cover;
+    background-position: center;
 }
 
 #google_translate_element {
@@ -188,3 +211,47 @@ body {
         font-size: 32px;
     }
 }
+
+@media all and (min-width: 768px) {
+    aside {
+        margin: 1em 9%;
+    }
+
+    #bottom_four_2 {
+        vertical-align: middle;
+        text-align: center;
+        line-height: 1em;
+        font-size: 5em;
+    }
+
+    .bottom_four {
+    display: table-cell;
+    width: 25%;
+    margin: 0;
+    height: 100%;
+    padding: 0;
+    position: relative;
+    border: none;
+    vertical-align: top;
+    text-align: center;
+    }
+
+    .bottom_four a {
+        padding: 0;
+        margin: 0;
+        border: 1 solid;
+    }
+
+    .bottom_four h2 {
+        margin-top: 0;
+        padding: 10px;
+        font-size: 2em
+    }
+
+    .bottom_four ul {
+        list-style: none;
+        font-size: 1.5em;
+    }
+
+}
+
