Changed text views to use common head/foot stylesheets Wrote default contents for text docs Split head into head_start and head_end_and_header (allows per-page/per-app stylesheets) Added text to header and slideshow Updated slideshow to show current dot as white Updated #under_construction to take up space before fading in

--- a/apps/ayoshitake.com/public/css/style.css
+++ b/apps/ayoshitake.com/public/css/style.css
@@ -121,7 +121,7 @@ html {
 }
 
 #about_page > img {
-	opacity: 50%;
+	opacity: 0.5;
   width: 10%;
   min-width: 100px;
 }
@@ -149,7 +149,6 @@ html {
 }
 
 #under_construction {
-	display: none;
   font-weight: normal;
 }
 
@@ -162,4 +161,8 @@ html {
 #wilfred {
   max-width: 33%;
   margin: 10px auto;
+}
+
+a.activeSlide {
+  color: white;
 }
