--- a/views/head.ejs
+++ b/views/head.ejs
@@ -1,158 +1,2 @@
-<!doctype html>
-<!-- paulirish.com/2008/conditional-stylesheets-vs-css-hacks-answer-neither/ -->
-<!--[if lt IE 7]> <html class="no-js lt-ie9 lt-ie8 lt-ie7" lang="en"> <![endif]-->
-<!--[if IE 7]>    <html class="no-js lt-ie9 lt-ie8" lang="en"> <![endif]-->
-<!--[if IE 8]>    <html class="no-js lt-ie9" lang="en"> <![endif]-->
-<!-- Consider adding a manifest.appcache: h5bp.com/d/Offline -->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="en"> <!--<![endif]-->
-<head>
-  <meta charset="utf-8">
-
-  <!-- Use the .htaccess and remove these lines to avoid edge case issues.
-       More info: h5bp.com/i/378 -->
-  <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-
-  <title><%= title %></title>
-  <meta name="description" content="">
-
-  <!-- Mobile viewport optimized: h5bp.com/viewport -->
-  <meta name="viewport" content="width=device-width, initial-scale=1"> 
-
-  <!-- Place favicon.ico and apple-touch-icon.png in the root directory: mathiasbynens.be/notes/touch-icons -->
-
-  <link rel="stylesheet" href="<%= settings.protocol %>://<%= settings.base_url %>/css/header.css" />
-  <link rel="stylesheet" href="css/style.css" />
-
-  <!-- More ideas for your <head> here: h5bp.com/d/head-Tips -->
-
-  <!-- All JavaScript at the bottom, except this Modernizr build.
-       Modernizr enables HTML5 elements & feature detects for optimal performance.
-       Create your own custom Modernizr build: www.modernizr.com/download/ -->
-  <script src="<%= settings.protocol %>://<%= settings.base_url %>/js/lib/modernizr-2.5.3.min.js"></script>
-</head>
-<body>
-  <!-- Prompt IE 6 users to install Chrome Frame. Remove this if you support IE 6.
-       chromium.org/developers/how-tos/chrome-frame-getting-started -->
-  <!--[if lt IE 7]><p class=chromeframe>Your browser is <em>ancient!</em> <a href="http://browsehappy.com/">Upgrade to a different browser</a> or <a href="http://www.google.com/chromeframe/?redirect=true">install Google Chrome Frame</a> to experience this site.</p><![endif]-->
-    <header>
-        <% if (! settings.hide_navbar) { %>
-            <div class="navbar">
-                <ul>
-                    <%
-                    var sites = [
-                            { name: 'home', 
-                              href: settings.base_url, 
-                              dropdown: [
-                                { name: 'about', href: settings.base_url + '/about' },
-                                { name: 'contact', href: settings.base_url + '/contact' },
-                              ],
-                            },
-                            { name: 'corridor', href: 'corridor.' + settings.base_url },
-                            { name: 'fortune cookie', href: 'fortunecookie.' + settings.base_url },
-                            { name: 'markslist', href: 'markslist.' + settings.base_url },
-                            { name: 'minesweeper', href: 'minesweeper.' + settings.base_url },
-                            { name: 'wishing well', href: 'wishingwell.' + settings.base_url },
-                            { name: 'magi-cal', href: 'magi-cal.me' },
-                            { name: 'ETS', href: 'etstutoring.org' },
-                        ],
-                        i,
-                        j,
-                        len,
-                        len2,
-                        pagename,
-                        pagehref,
-                        site_name,
-                        site_href,
-                        site_dropdown;
-
-                    for (i = 0, len = sites.length; i < len; i++) {
-                        site_name = sites[i].name;
-                        site_href = sites[i].href;
-                        site_dropdown = sites[i].dropdown;
-                    %>
-                        <li>
-                            <a href="<%= settings.protocol %>://<%= site_href %>"
-                                <%
-                                if (settings.site_name === site_name) { %>
-                                    class="current_site"
-                                <% } %>
-                            ><%= site_name.toUpperCase() %></a>
-                           <!--write nested ul for dropdowns-->
-                            <% if (site_dropdown !== undefined ) { %>
-                              <ul>
-                              <% for (j=0, len2 = site_dropdown.length; j < len2; j++) {
-                                pagename = site_dropdown[j].name;
-                                pagehref = site_dropdown[j].href;
-                                %>
-                                <li>
-                                  <a href="<%= settings.protocol %>://<%= pagehref %>"> <%= pagename %> </a>
-                                </li>
-                              <% } %>  
-                              </ul>
-                            <% } %>
-                        </li>
-                    <% } %>
-                    <!-- Combined Register/Login Dropdown-->
-                    <li class="right">
-                      <% if (locals.username) { %>
-                        <a href="/logout">Logout <%= locals.username.toUpperCase() %></a>
-                      <% } else { %>
-                        <a href="#" id="login_trigger">Login/Register</a>
-                      <% } %>
-
-                    <!--Login div-->
-                    <% if (! locals.username) { %>
-                    <div id="login" class="dropdown_form">
-                      <form action="/login" method="post">
-                        <div class="username">
-                          <label>Username:</label>
-                          <input type="text" name="username" placeholder="username" autofocus /><br/>
-                        </div>
-                        <div class="password">
-                          <label>Password:</label>
-                          <input type="password" name="password" placeholder="password" />
-                        </div>
-                        <div class="submit_button">
-                          <input type="submit" value="Login" class="button" />
-                        </div>
-                      </form>
-                        <!-- Register form div-->
-                      <form action="/register" method="post">
-                          <div class="username">
-                              <label>Username:</label>
-                              <input type="text" name="username" placeholder="username" autofocus /><br/>
-                          </div>
-                          <div class="password">
-                              <label>Password:</label>
-                              <input type="password" name="password" placeholder="password" />
-                          </div>
-                          <div class="password">
-                              <label>Confirm Password:</label>
-                              <input type="password" name="password2" placeholder="re-type password" />
-                          </div>
-                          <div class="submit_button">
-                              <input type="submit" value="Register" class="button"/>
-                          </div>
-                      </form>
-                      <!--Guest Access button, to add later
-                      <div>
-                        <input type="submit" value="Guest Access" class="button" />
-                      </div>  -->
-                    </div><!-- end of login div-->
-                      
-                        <% } %>                      
-                    </li>
-
-
-                </ul>
-            </div>
-        <% } %>
-        <% if (settings.show_banner) { %>
-            <div class="banner">
-                <a href="<%= settings.protocol %>://<%= settings.base_url %>">
-                    <img src="<%= settings.protocol %>://<%= settings.base_url %>/img/aybanner3.png" title="ayoshitake.com" />
-                </a>
-                <h3 id="under_construction">PERMANENTLY UNDER CONSTRUCTION</h3>
-            </div>
-        <% } %>
-    </header>
+<% include head_start %>
+<% include head_end_and_header %>
