--- a/views/foot.ejs
+++ b/views/foot.ejs
@@ -1,79 +1,2 @@
-  <!-- JavaScript at the bottom for fast page loading -->
-  <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
-  <script>window.jQuery || document.write('<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"><\/script>')</script>
-  <script>window.jQuery || document.write('<script src="<%= settings.protocol %>://<%= settings.base_url %>/js/lib/jquery-1.10.1.min.js"><\/script>')</script>
-
-  <!-- Navbar script (for dropdown animation) -->
-  <% if (! settings.hide_navbar) { %>
-    <script src="<%= settings.protocol %>://<%= settings.base_url %>/js/lib/jquery.hoverIntent.min.js"></script>
-
-    <script>
-      $('.navbar li ul').css({
-        display: 'none',
-        left: 'auto'
-      });
-
-      $('.navbar li').hoverIntent(function() {
-        $(this)
-          .find('ul')
-          .stop(true, true)
-          .slideDown('fast');
-
-      }, function() {
-        $(this)
-          .find('ul')
-          .stop(true, true)
-          .fadeOut('fast');
-      });
-    </script>
-  <% } %>
-
-  <!-- Hide/Show Register/Login functionality -->
-  <script>
-    $(document).ready(function() {
-      $('#login').hide();
-      $('#login_trigger').toggle(function() {
-        $(this)
-          .addClass('active');
-        $('#login')
-          .css({
-          left: $(this).position().left - $(this).width(), 
-          top: $(this).position().top + $(this).height()
-          })
-          .slideDown();
-      }, function () {
-        $(this)
-          .removeClass('active');
-        $('#login')
-          .slideUp();
-      });
-      $('#login form :submit').click(function() {
-        $(this)
-          .parent()
-          .prev('a')
-          .click();
-        });
-    });
-  </script>
-
-  <% if (settings.show_banner) { %> 
-  <!-- fade in the "under construction" message -->
-    <script>$('#under_construction').css('opacity', .001)
-                                    .animate({ opacity: 1.0 }, 2000);</script> 
-  <% } %>
-
-  <!-- scripts concatenated and minified via build script -->
-  
-  <script src="/js/plugins.js"></script>
-  <script src="/js/script.js"></script>
-  <!-- end scripts -->
-
-  <!-- Asynchronous Google Analytics snippet. mathiasbynens.be/notes/async-analytics-snippet -->
-  <script>
-    var _gaq=[['_setAccount','UA-29868593-1'],['_trackPageview']];
-    (function(d,t){var g=d.createElement(t),s=d.getElementsByTagName(t)[0];
-    g.src=('https:'==location.protocol?'//ssl':'//www')+'.google-analytics.com/ga.js';
-    s.parentNode.insertBefore(g,s)}(document,'script'));
-  </script>
-</body>
-</html>
+<% include foot_start %>
+<% include foot_end %>
