ETS: WIP- Sam onclick sketch to color transition

--- a/apps/ets_tutoring_2/public/css/style.css
+++ b/apps/ets_tutoring_2/public/css/style.css
@@ -110,7 +110,7 @@ body {
 
 
 #bottom_four_4 {
-    background-image: url('/img/IMG_0378_draw1.jpg');
+    background-image: url('/img/IMG_0378_1200_vignette1.jpg');
     background-size: cover;
     background-position: center;
 }
