temporarily removed magi-cal links edited portal slideshow to fix all images flashing on screen.

--- a/apps/ayoshitake.com/public/css/style.css
+++ b/apps/ayoshitake.com/public/css/style.css
@@ -84,8 +84,12 @@ html {
 
 .slideshow a {
   min-width: 275px;
+  display: none;
 }
 
+.slideshow a.first {
+  display: block;
+}
 .slideshow a.portal img {
     min-width: 275px; 
 }
