--- a/apps/ayoshitake.com/views/index.ejs
+++ b/apps/ayoshitake.com/views/index.ejs
@@ -2,7 +2,7 @@
 
 <div role="main" class="main">
     <div class="slideshow">
-        <a class="portal" href="<%= settings.protocol %>://wishingwell.<%= settings.base_url %>">
+        <a class="portal first" href="<%= settings.protocol %>://wishingwell.<%= settings.base_url %>">
             <img src="/img/well_275.jpg" title="Wishing Well" />
         </a>
 
@@ -30,9 +30,9 @@
             <img src="/img/chart_small_275.jpg" title="ETS Educational and Tutorial Services" />
         </a>
 
-        <a class="portal" href="<%= settings.protocol %>://magi-cal.me">
+        <!--temporarily removed from document flow <a class="portal" href="<%= settings.protocol %>://magi-cal.me">
             <img src="/img/magi_cal_wizard2_275.jpg" title="Magi-Cal" />
-        </a>
+        </a> -->
     </div>
 </div>
 
