--- a/views/head_end_and_header.ejs
+++ b/views/head_end_and_header.ejs
@@ -26,7 +26,7 @@
                             { name: 'minesweeper', href: 'minesweeper.' + settings.base_url },
                             { name: 'wishing well', href: 'wishingwell.' + settings.base_url },
                             { name: 'text', href: 'text.' + settings.base_url },
-                            { name: 'magi-cal', href: 'magi-cal.me' },
+                            <!-- temporarily removed { name: 'magi-cal', href: 'magi-cal.me' }, -->
                             { name: 'ETS', href: 'etstutoring.org' },
                         ],
                         i,
