--- a/apps/corridor/views/index.ejs
+++ b/apps/corridor/views/index.ejs
@@ -11,9 +11,9 @@
   <!-- Scripts not included in foot.ejs (or which need to be added before these site-specific scripts) -->
   <!-- Grab Google CDN's jQuery, with a protocol relative URL; fall back to local if offline -->
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>
-  <script>window.jQuery || document.write('<script src="/js/libs/jquery-1.10.1.min.js"><\/script>')</script>
+  <script>window.jQuery || document.write('<script src="/js/lib/jquery-1.10.1.min.js"><\/script>')</script>
 
-  <script src="/js/libs/jquery-ui-1.8.21.custom.min.js"></script>
+  <script src="/js/lib/jquery-ui-1.10.3.custom.min.js"></script>
 
   <script src="/socket.io/socket.io.js"></script>
   <script src="/js/board_classes.js"></script>
