--- a/apps/ets_tutoring_2/public/css/style.css
+++ b/apps/ets_tutoring_2/public/css/style.css
@@ -2,11 +2,17 @@
    Author: Red Pill Web Masons
    ========================================================================== */
 
-@font-face  {
-    font-family: BurstMyBubble;
-    src: url('/BurstMyBubble.ttf');
-}
+@font-face {
+    font-family: 'burst_my_bubbleregular';
+    src: url('/burstmybubble-webfont.eot');
+    src: url('/burstmybubble-webfont.eot?#iefix') format('embedded-opentype'),
+         url('/burstmybubble-webfont.woff') format('woff'),
+         url('/burstmybubble-webfont.ttf') format('truetype'),
+         url('/burstmybubble-webfont.svg#burst_my_bubbleregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
 
+}
 
 aside {
     display: block;
@@ -15,7 +21,7 @@ aside {
 
 html, body {
     height: 100%;
-    font-family: BurstMyBubble, arial, sans-serif;
+    font-family: burst_my_bubbleregular, PaulMaul, ShortStack, arial, sans-serif;
     font-size: 1.1em;
 }
 
