Initial version of Troll's Goals app, with Category and Tag CRUD (Category-Tag link not-quite-functional) Trivial tweaks to fortune_cookie and template app

--- a/apps/trolls_goals/public/css/style.css
+++ b/apps/trolls_goals/public/css/style.css
@@ -215,22 +215,18 @@ td { vertical-align: top; }
 
 
 /* ==|== primary styles =====================================================
-   Author:
+   Author: Red Pill Web Masons
    ========================================================================== */
 
+multiselect .dropdown-menu{
+    padding-left: 5px; 
+    padding-right: 5px;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+multiselect .dropdown-menu > li > a {
+    padding: 3px 10px;
+    cursor:pointer;
+}
 
 
 /* ==|== media queries ======================================================
